--- a/NextMart-Client/package.json
+++ b/NextMart-Client/package.json
@@ -32,7 +32,7 @@
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.471.1",
-    "next": "15.1.4",
+    "next": "^15.3.3",
     "next-themes": "^0.4.4",
     "nextjs-progressbar": "^0.0.16",
     "react": "^19.0.0",
